# ImVideo

./: .gitignore  .ignore  CMakeLists.txt  README.md  README_zh.md  vcpkg.json
.github/workflows/: release.yml
cmake/: FindFFMPEG.cmake  imvideoConfig.cmake.in
docs/: README_zh.md
examples/implayer/: CMakeLists.txt  CMakePresets.json  vcpkg.json
examples/implayer/overlay/imvideo/: vcpkg.json
examples/implayer/overlay/imvideo/cmake/: FindFFMPEG.cmake
examples/implayer/src/: app.cpp  app.hpp  main.cpp
examples/implayer/toolchains/: macos-link.cmake  macos.cmake  mingw-static-link.cmake  mingw-static.cmake
examples/imv/: CMakeLists.txt  CMakePresets.json  app.cpp  app.hpp  file_dialog.hpp  file_dialog_linux.cpp  file_dialog_mac.mm  file_dialog_win.cpp  main.cpp  vcpkg.json
examples/imv/overlay-github/imvideo/: portfile.cmake  vcpkg.json
examples/imv/overlay-github/imvideo/cmake/: FindFFMPEG.cmake
examples/imv/overlay/imvideo/: portfile.cmake  vcpkg.json
include/imvideo/: imvideo.h
ports/imvideo/: portfile.cmake  vcpkg.json
src/: audio_engine.cpp  audio_engine.hpp  player.cpp  player_impl.hpp  ring_buffer.hpp  video.cpp  video_frame.hpp
streamlab/: Makefile  README.md
